--- a/app/src/main/res/layout/restaurant_card.xml
+++ b/app/src/main/res/layout/restaurant_card.xml
@@ -1,11 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--  Single List Item Design -->
-
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/label"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:padding="10dip"
-    android:textSize="16dip"
-    android:textStyle="bold" >
-</TextView>
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_weight="1"
+    android:text="TextView" />
